--- a/PasswordManagerMainWindow/MainWindow.xaml
+++ b/PasswordManagerMainWindow/MainWindow.xaml
@@ -5,8 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PasswordManagerMainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="270" Width="450" 
+        Background="Black"
+        >
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="150"/>
+            <ColumnDefinition Width="300"/>
+            
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="100"/>
+            <RowDefinition Height="100"/>
+            <RowDefinition Height="50"/>
+        </Grid.RowDefinitions>
+        <TextBlock Grid.Row="0" Grid.Column="0" Text="Login" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White"/>
+        <TextBlock Grid.Row="1" Grid.Column="0" Text="Password" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White"/>
+        <TextBox x:Name="Login" Grid.Row="0" Grid.Column="1" Width="250" Height="30" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <TextBox x:Name="Password" Grid.Row="1" Grid.Column="1" Width="250" Height="30" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Button x:Name="Submit" Grid.Row="2" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center" Height="20" Width=" 70" Content="Sign In" Click="Submit_Click"/>
     </Grid>
 </Window>
