--- a/PasswordManagerMainWindow/App.xaml
+++ b/PasswordManagerMainWindow/App.xaml
@@ -1,9 +1,12 @@
 ﻿<Application x:Class="PasswordManagerMainWindow.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:PasswordManagerMainWindow"
              StartupUri="Auth/Auth.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Auth/AuthStyles.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
