--- a/PasswordManagerMainWindow/Auth/Signup.xaml
+++ b/PasswordManagerMainWindow/Auth/Signup.xaml
@@ -1,11 +1,11 @@
-﻿<Page x:Class="PasswordManagerMainWindow.Auth.Login"
+﻿<Page x:Class="PasswordManagerMainWindow.Auth.Signup"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:PasswordManagerMainWindow.Auth"
       mc:Ignorable="d" 
-      d:DesignHeight="520" d:DesignWidth="500"
+     d:DesignHeight="520" d:DesignWidth="500"
       Title="Login"
       Background="White"
       ShowsNavigationUI="False"
@@ -36,15 +36,15 @@
                    Grid.RowSpan="2"
                    HorizontalAlignment="Right"
                    
-                   FontSize="14" Margin="0,32,20,32"
+                   FontSize="14" Margin="0,32,65,32"
                    >
-            <Hyperlink NavigateUri="Signup.xaml" Foreground="#7289da"
+            <Hyperlink NavigateUri="Login.xaml" Foreground="#7289da"
                    FontFamily="Global Sans Serif" 
                    FontWeight="Bold" TextDecorations="{x:Null}">
-                Create new account
+                Log In
             </Hyperlink>
         </TextBlock>
-        <TextBlock Text="Welcome! " Grid.Column="1" Grid.Row="2" 
+        <TextBlock Text="Create new account" Grid.Column="1" Grid.Row="2" 
                    HorizontalAlignment="Left" 
                    VerticalAlignment="Center" 
                    FontSize="28" 
@@ -52,7 +52,7 @@
                    FontFamily="Global Sans Serif" 
                    FontWeight="Bold"
                    />
-        <TextBlock Text="Please Log into your account " Grid.Column="1" Grid.Row="3" 
+        <TextBlock Text="Please fill all following fields" Grid.Column="1" Grid.Row="3" 
                    HorizontalAlignment="Left" 
                    VerticalAlignment="Center" 
                    FontSize="14" 
@@ -92,21 +92,13 @@
         <TextBlock x:Name="AurhError" Grid.Row="10" Grid.Column="1" Text="Error sample" Style="{StaticResource ErrorAuth}"/>
         <Button x:Name="Submit" Grid.Column="1"
             Grid.Row="11"
-            Content="Login"
+            Content="Sign Up"
             Width="150"
             Height="50" 
-                Style="{StaticResource Submit}"/>
-        <TextBlock Grid.Row="11" Grid.Column="1" 
-                   HorizontalAlignment="Right"
-                   VerticalAlignment="Center"
-                   
-                   FontSize="14" 
-                   >
-            <Hyperlink NavigateUri = "Signup.xaml" Foreground="#7289da"
-                   FontFamily="Global Sans Serif" 
-                   FontWeight="Bold" TextDecorations="{x:Null}">
-                Reset password
-            </Hyperlink>
-        </TextBlock>
+            Style="{StaticResource Submit}"
+                Click="Submit_Click"
+                />
+            
     </Grid>
 </Page>
+
