--- a/PasswordManagerMainWindow/App.xaml
+++ b/PasswordManagerMainWindow/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="PasswordManagerMainWindow.App"
+﻿<Application x:Class="PasswordManager.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="Auth/Auth.xaml">
