--- a/PasswordManagerMainWindow/Auth/EmailConfirmation.xaml
+++ b/PasswordManagerMainWindow/Auth/EmailConfirmation.xaml
@@ -1,9 +1,9 @@
-﻿<Page x:Class="PasswordManagerMainWindow.Auth.EmailConfirmation"
+﻿<Page x:Class="PasswordManager.Auth.EmailConfirmation"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:PasswordManagerMainWindow.Auth"
+      xmlns:local="clr-namespace:PasswordManager.Auth"
       mc:Ignorable="d" 
       d:DesignHeight="520" d:DesignWidth="500"
       Title="Login"
