--- a/PasswordManagerMainWindow/Auth/Auth.xaml
+++ b/PasswordManagerMainWindow/Auth/Auth.xaml
@@ -13,6 +13,7 @@
         WindowStartupLocation="CenterScreen"
         AllowsTransparency="True"
         Background="White"
+        MouseLeftButtonDown="Window_MouseLeftButtonDown"
         >
     <Grid>
         <Grid.RowDefinitions>
