--- a/PasswordManagerMainWindow/Auth/Signup.xaml
+++ b/PasswordManagerMainWindow/Auth/Signup.xaml
@@ -83,12 +83,33 @@
                    FontWeight="Bold"
                    />
 
-        <PasswordBox
+        <!--<PasswordBox
             x:Name="PasswordTextBox" Grid.Row="9" 
                  Grid.Column="1" 
                  Height="40"                
             Style="{StaticResource PswdBoxAuth}"
+            Visibility="Visible"
+            Padding="0,0,30,0"
+           
+            />-->
+
+        <TextBox x:Name="FakePassword"  Grid.Row="9" 
+                 Grid.Column="1" 
+                 Height="40"        
+                 Visibility="Visible"
+            Padding="0,0,30,0"
+                 Style="{StaticResource TextBoxAuth}"
+                 
+                 TextChanged="FakePassword_TextChanged"
                  />
+        <ToggleButton Content="&#xF78D;" FontFamily="Segoe MDL2 Assets" Background="Transparent" Grid.Row="9" 
+                      Grid.Column="1"  
+                      HorizontalAlignment="Right"
+                      Height="30" Width="30" 
+                      BorderThickness="0" FontSize="16"
+                      
+                      />
+
         <TextBlock x:Name="AurhError" Grid.Row="10" Grid.Column="1" Text="Error sample" Style="{StaticResource ErrorAuth}"/>
         <Button x:Name="Submit" Grid.Column="1"
             Grid.Row="11"
@@ -96,8 +117,7 @@
             Width="150"
             Height="50" 
             Style="{StaticResource Submit}"
-                Click="Submit_Click"
-                />
+                Click="Submit_Click"/>
             
     </Grid>
 </Page>
