--- a/PasswordManagerMainWindow/Auth/AuthStyles.xaml
+++ b/PasswordManagerMainWindow/Auth/AuthStyles.xaml
@@ -145,12 +145,41 @@
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
-            <Setter Property="Padding" Value="5"/>
+            <Setter Property="Padding" Value="5,5,30,5"/>
             <Setter Property="FontFamily" Value="Global Sans Serif"/>
             <Setter Property="BorderThickness" Value="2"/>
             <Setter Property="VerticalContentAlignment" Value="Center"/>
             <Setter Property="FontSize" Value="16"/>
             <Setter Property="BorderBrush" Value="Black"/>
+        </Style.Setters>
+    </Style>
+
+    <Style x:Key="RevealPassword" TargetType="ToggleButton">
+
+        <Style.Setters>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ToggleButton">
+                        <Image x:Name="img" HorizontalAlignment="Center" VerticalAlignment="Center" Stretch="Fill">
+                            <Image.Style>
+                                <Style TargetType="Image">
+                                    <Setter Property="Source" Value="/Auth/Assets/eye.png"/>
+                                </Style>
+                            </Image.Style>
+                        </Image>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsChecked" Value="True">
+                                <Setter TargetName="img" Property="Source" Value="/Auth/Assets/closed_eye.png"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="HorizontalAlignment" Value="Right"/>
+            <Setter Property="Height" Value="30"/>
+            <Setter Property="Width" Value="30"/>
+            <Setter Property="Margin" Value="5,0,5,0"/>
         </Style.Setters>
     </Style>
 </ResourceDictionary>
