--- a/PasswordManagerMainWindow/Auth/Signup.xaml
+++ b/PasswordManagerMainWindow/Auth/Signup.xaml
@@ -3,7 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:PasswordManager.Auth"
+      xmlns:local="clr-namespace:PasswordManager.Auth" xmlns:components="clr-namespace:PasswordManager.Components"
       mc:Ignorable="d" 
      d:DesignHeight="520" d:DesignWidth="500"
       Title="Login"
@@ -73,6 +73,7 @@
                  BorderThickness="2" 
                  Height="40"
                  Style="{StaticResource TextBoxAuth}"
+                
                  />
         <TextBlock Text="Password" Grid.Column="1" Grid.Row="8" 
                    HorizontalAlignment="Left" 
@@ -83,31 +84,32 @@
                    FontWeight="Bold"
                    />
 
-        <!--<PasswordBox
+        <components:BindablePasswordBox
             x:Name="PasswordTextBox" Grid.Row="9" 
                  Grid.Column="1" 
                  Height="40"                
-            Style="{StaticResource PswdBoxAuth}"
             Visibility="Visible"
-            Padding="0,0,30,0"
-           
-            />-->
-
-        <TextBox x:Name="FakePassword"  Grid.Row="9" 
+            Password="{Binding Text, ElementName=KindaPassword}"
+            />
+        <TextBox x:Name="KindaPassword"  Grid.Row="9" 
                  Grid.Column="1" 
                  Height="40"        
-                 Visibility="Visible"
-            Padding="0,0,30,0"
-                 Style="{StaticResource TextBoxAuth}"/>
-        <ToggleButton Content="&#xF78D;" FontFamily="Segoe MDL2 Assets" Background="Transparent" Grid.Row="9" 
-                      Grid.Column="1"  
-                      HorizontalAlignment="Right"
-                      Height="30" Width="30" 
+                 Visibility="Collapsed"
+                 Padding="5,0,30,0"
+                 Style="{StaticResource TextBoxAuth}"   
+                 Text="{Binding Password, ElementName=PasswordTextBox}"
+                 />
+
+        <ToggleButton
+            Grid.Row="9" 
+                 Grid.Column="1" 
+                      Height="25" Width="25" 
                       BorderThickness="0" FontSize="16"
-                      
+                      Checked="ToggleButton_Checked"
+                      Unchecked="ToggleButton_Unchecked"
+                      IsChecked="False"
+                      Style="{StaticResource RevealPassword}"
                       />
-
-
 
 
         <TextBlock x:Name="AurhError" Grid.Row="10" Grid.Column="1" Text="Error sample" Style="{StaticResource ErrorAuth}"/>
@@ -116,64 +118,9 @@
             Content="Sign Up"
             Width="150"
             Height="50" 
-            Style="{StaticResource Submit}"/>
-        <StackPanel
-            Margin="85,3.667,0.333,10" 
-            Grid.Row="10" 
-            Grid.ColumnSpan="2">
-            <DockPanel 
-            x:Name="PasswordComplexityPanel">
-                <Rectangle x:Name="VeryWeakPasswordRectangle"
-                       Fill="#FFF4F4F5" 
-                       Height="14" 
-                       Stroke="Black"
-                       Width="60" 
-                       Margin="2,0"
-                       HorizontalAlignment="Left"
-                       VerticalAlignment="Top"/>
-                <Rectangle x:Name="WeakPasswordRectangle"
-                       Fill="#FFF4F4F5" 
-                       Height="14" 
-                       Stroke="Black"
-                       Margin="6,0" 
-                       Width="60" 
-                       HorizontalAlignment="Left"
-                       VerticalAlignment="Top"/>
-                <Rectangle x:Name="NormalPasswordRectangle"
-                       Fill="#FFF4F4F5" 
-                       Height="14" 
-                       Stroke="Black"
-                       Margin="0,0" 
-                       Width="60" 
-                       HorizontalAlignment="Left"
-                       VerticalAlignment="Top"/>
-                <Rectangle x:Name="StrongPasswordRectangle"
-                       Fill="#FFF4F4F5" 
-                       Height="14" 
-                       Stroke="Black"
-                       Margin="6,0" 
-                       Width="60" 
-                       HorizontalAlignment="Left"
-                       VerticalAlignment="Top"/>
-                <Rectangle x:Name="VeryStrongPasswordRectangle"
-                       Fill="#FFF4F4F5" 
-                       Height="14" 
-                       Stroke="Black"
-                       Width="60" 
-                       HorizontalAlignment="Left"
-                       VerticalAlignment="Top"/>
-
-            </DockPanel>
-            <TextBlock x:Name="PasswordComplexityTextBlock"
-                       TextWrapping="Wrap" 
-                       Text="{Binding PasswordComplexityText}"
-                       Foreground="{Binding PasswordComplexityColor}"
-                       HorizontalAlignment="Center"
-                       Margin="141,0,138,0" Width="51"/>
-
-
-        </StackPanel>
-        
+            Style="{StaticResource Submit}"
+                Click="Submit_Click"/>
+            
     </Grid>
 </Page>
 
