--- a/PasswordManagerMainWindow/Auth/AuthStyles.xaml
+++ b/PasswordManagerMainWindow/Auth/AuthStyles.xaml
@@ -153,4 +153,20 @@
             <Setter Property="BorderBrush" Value="Black"/>
         </Style.Setters>
     </Style>
+
+
+    <Style x:Key="PasswordCompexityRectangle" TargetType="{x:Type Rectangle}">
+        <Style.Setters>
+            <Setter Property="Fill" Value="#EBEBEB"/>
+            <Setter Property="Height" Value="14"/>
+            <Setter Property="Width" Value="60"/>
+            <Setter Property="Stroke" Value="#C6C6C6"/>
+            <Setter Property="VerticalAlignment" Value="Top"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="Visibility" Value="Visible"/>
+        </Style.Setters>
+    </Style>
+
+
+
 </ResourceDictionary>
