--- a/PasswordManagerMainWindow/Auth/Signup.xaml
+++ b/PasswordManagerMainWindow/Auth/Signup.xaml
@@ -24,8 +24,8 @@
             <RowDefinition Height="30"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="62"/>
+            <RowDefinition Height="Auto" MinHeight="8"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="85"/>
@@ -36,7 +36,7 @@
                    Grid.RowSpan="2"
                    HorizontalAlignment="Right"
                    
-                   FontSize="14" Margin="0,32,65,32"
+                   FontSize="14" Margin="0,32,65.333,32.333" Width="42"
                    >
             <Hyperlink NavigateUri="Login.xaml" Foreground="#7289da"
                    FontFamily="Global Sans Serif" 
@@ -44,136 +44,91 @@
                 Log In
             </Hyperlink>
         </TextBlock>
-        <TextBlock Text="Create new account" Grid.Column="1" Grid.Row="2" 
+        <TextBlock Text="Create new account" Grid.Row="1" 
                    HorizontalAlignment="Left" 
                    VerticalAlignment="Center" 
                    FontSize="28" 
                    Foreground="Black"
                    FontFamily="Global Sans Serif" 
-                   FontWeight="Bold"
+                   FontWeight="Bold" Grid.ColumnSpan="2" Height="33" Margin="85,39.333,0,19.667" Grid.RowSpan="3" Width="265"
                    />
-        <TextBlock Text="Please fill all following fields" Grid.Column="1" Grid.Row="3" 
+        <TextBlock Text="Please fill all following fields" Grid.Row="3" 
                    HorizontalAlignment="Left" 
                    VerticalAlignment="Center" 
                    FontSize="14" 
                    Foreground="SlateGray"
                    FontFamily="Global Sans Serif" 
-                   FontWeight="Bold"
+                   FontWeight="Bold" Grid.ColumnSpan="2" Height="17" Margin="85,2,0,1.667" Width="190"
                    />
-        <TextBlock Text="Login" Grid.Column="1" Grid.Row="5" 
+        <TextBlock Text="Login" Grid.Row="5" 
                    HorizontalAlignment="Left" 
                    VerticalAlignment="Center" 
                    FontSize="14" 
                    Foreground="Black"
                    FontFamily="Global Sans Serif" 
-                   FontWeight="Bold"
+                   FontWeight="Bold" Grid.ColumnSpan="2" Height="17" Margin="85,7,0,6.667" Width="38"
                    />
         <TextBox x:Name="LoginTextBox" Grid.Row="6" 
-                 Grid.Column="1" 
-                 BorderThickness="2" 
-                 Height="40"
-                 Style="{StaticResource TextBoxAuth}"
+                 BorderThickness="2"
+                 Style="{StaticResource TextBoxAuth}" Grid.ColumnSpan="2" Margin="85,5.333,0.333,5.333"
                  />
-        <TextBlock Text="Password" Grid.Column="1" Grid.Row="8" 
+        <TextBlock Text="Password" Grid.Row="8" 
                    HorizontalAlignment="Left" 
                    VerticalAlignment="Center" 
                    FontSize="14" 
                    Foreground="Black"
                    FontFamily="Global Sans Serif" 
-                   FontWeight="Bold"
-                   />
+                   FontWeight="Bold" Grid.ColumnSpan="2" Height="17" Margin="85,7,0,6.667" Width="66"/>
 
-        <!--<PasswordBox
-            x:Name="PasswordTextBox" Grid.Row="9" 
-                 Grid.Column="1" 
-                 Height="40"                
-            Style="{StaticResource PswdBoxAuth}"
-            Visibility="Visible"
-            Padding="0,0,30,0"
-           
-            />-->
-
-        <TextBox x:Name="FakePassword"  Grid.Row="9" 
-                 Grid.Column="1" 
-                 Height="40"        
+        <TextBox x:Name="FakePassword"  Grid.Row="9"        
                  Visibility="Visible"
-            Padding="0,0,30,0"
-                 Style="{StaticResource TextBoxAuth}"/>
+                 Padding="0,0,30,0"
+                 Style="{StaticResource TextBoxAuth}" TextChanged="FakePassword_TextChanged" Grid.ColumnSpan="2" Margin="85,5.333,0.333,5.333"/>
         <ToggleButton Content="&#xF78D;" FontFamily="Segoe MDL2 Assets" Background="Transparent" Grid.Row="9" 
                       Grid.Column="1"  
-                      HorizontalAlignment="Right"
-                      Height="30" Width="30" 
-                      BorderThickness="0" FontSize="16"
-                      
-                      />
+                      HorizontalAlignment="Right" Width="30" 
+                      BorderThickness="0" FontSize="16" Margin="0,10.333,0.333,10.333"/>
 
-
-
-
-        <TextBlock x:Name="AurhError" Grid.Row="10" Grid.Column="1" Text="Error sample" Style="{StaticResource ErrorAuth}"/>
-        <Button x:Name="Submit" Grid.Column="1"
+        <TextBlock x:Name="AurhError" Grid.Row="10" Text="Error sample" Style="{StaticResource ErrorAuth}" Grid.ColumnSpan="2" Height="17" Margin="85,16.667,0,17" Width="80"/>
+        <Button x:Name="Submit"
             Grid.Row="11"
             Content="Sign Up"
             Width="150"
             Height="50" 
-            Style="{StaticResource Submit}"/>
-        <StackPanel
-            Margin="85,3.667,0.333,10" 
-            Grid.Row="10" 
-            Grid.ColumnSpan="2">
+            Style="{StaticResource Submit}" Grid.ColumnSpan="2" Margin="85,7,0,5.667"/>
+
+        <StackPanel Margin="85,3.667,0.333,0" 
+                    Grid.Row="10" 
+                    Grid.ColumnSpan="2">
             <DockPanel 
             x:Name="PasswordComplexityPanel">
                 <Rectangle x:Name="VeryWeakPasswordRectangle"
-                       Fill="#FFF4F4F5" 
-                       Height="14" 
-                       Stroke="Black"
-                       Width="60" 
-                       Margin="2,0"
-                       HorizontalAlignment="Left"
-                       VerticalAlignment="Top"/>
+                           Style="{DynamicResource PasswordCompexityRectangle}"
+                           Margin="2,0"/>
                 <Rectangle x:Name="WeakPasswordRectangle"
-                       Fill="#FFF4F4F5" 
-                       Height="14" 
-                       Stroke="Black"
-                       Margin="6,0" 
-                       Width="60" 
-                       HorizontalAlignment="Left"
-                       VerticalAlignment="Top"/>
+                           Margin="6,0" 
+                           Style="{StaticResource PasswordCompexityRectangle}"/>
                 <Rectangle x:Name="NormalPasswordRectangle"
-                       Fill="#FFF4F4F5" 
-                       Height="14" 
-                       Stroke="Black"
-                       Margin="0,0" 
-                       Width="60" 
-                       HorizontalAlignment="Left"
-                       VerticalAlignment="Top"/>
+                           Style="{StaticResource PasswordCompexityRectangle}"/>
                 <Rectangle x:Name="StrongPasswordRectangle"
-                       Fill="#FFF4F4F5" 
-                       Height="14" 
-                       Stroke="Black"
-                       Margin="6,0" 
-                       Width="60" 
-                       HorizontalAlignment="Left"
-                       VerticalAlignment="Top"/>
+                           Margin="6,0" 
+                           Style="{StaticResource PasswordCompexityRectangle}"/>
                 <Rectangle x:Name="VeryStrongPasswordRectangle"
-                       Fill="#FFF4F4F5" 
-                       Height="14" 
-                       Stroke="Black"
-                       Width="60" 
-                       HorizontalAlignment="Left"
-                       VerticalAlignment="Top"/>
+                           Style="{StaticResource PasswordCompexityRectangle}"/>
 
             </DockPanel>
             <TextBlock x:Name="PasswordComplexityTextBlock"
                        TextWrapping="Wrap" 
-                       Text="{Binding PasswordComplexityText}"
-                       Foreground="{Binding PasswordComplexityColor}"
+                       Text=""
                        HorizontalAlignment="Center"
-                       Margin="141,0,138,0" Width="51"/>
+                       Margin="0,5,0,0"
+                       FontSize="14"
+                       Width="205" 
+                       TextAlignment="Center"/>
 
 
         </StackPanel>
-        
+
     </Grid>
 </Page>
 
