--- a/PasswordManagerMainWindow/Auth/Auth.xaml
+++ b/PasswordManagerMainWindow/Auth/Auth.xaml
@@ -28,25 +28,31 @@
             <ColumnDefinition Width="500"/>
         </Grid.ColumnDefinitions>
         
-            <StackPanel WindowChrome.IsHitTestVisibleInChrome="True"
-                        Grid.Column="1" 
-                        Grid.ColumnSpan="2"
-                        Grid.Row="0" >
+        <StackPanel WindowChrome.IsHitTestVisibleInChrome="True"
+                    Grid.Column="1"                    
+                    Grid.ColumnSpan="2"
+                    Grid.Row="0">
+            
             <Button x:Name="CloseApp" 
-                HorizontalAlignment="Right" 
-                Height="30" Width="30" 
-                Content="&#xE711;" 
-                Style="{StaticResource CloseApp}"
-                Click="CloseWindow"/>
+                    HorizontalAlignment="Right" 
+                    Height="30" Width="30" 
+                    Content="&#xE711;" 
+                    Style="{StaticResource CloseApp}"
+                    Click="CloseWindow"/>
+            
         </StackPanel>
         
         <Rectangle Grid.Column="0" Grid.RowSpan="2">
             <Rectangle.Fill>
                 <ImageBrush ImageSource="/Assets/Relay.jpg"/>
             </Rectangle.Fill>
-            
         </Rectangle>
-        <Frame x:Name="AuthFrame" Grid.Column="1" Grid.Row="1" NavigationUIVisibility="Hidden"/>
+
+        <Frame
+            x:Name="AuthFrame" 
+            Grid.Column="1"
+            Grid.Row="1" 
+            NavigationUIVisibility="Hidden"/>
         
     </Grid>
 </Window>
