--- a/PasswordManagerMainWindow/Auth/AuthStyles.xaml
+++ b/PasswordManagerMainWindow/Auth/AuthStyles.xaml
@@ -1,7 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    
-                    >
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    
     <Style TargetType="Button" x:Key="CloseApp">
         <Style.Setters>
             <Setter Property="Template">
@@ -10,23 +9,25 @@
                         <Grid
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center"
-                           Background="{TemplateBinding Background}"
+                            Background="{TemplateBinding Background}"
                             Height="{TemplateBinding Height}"
-                            Width="{TemplateBinding Width}"
-                            >
+                            Width="{TemplateBinding Width}">
+
                             <TextBlock Text="{TemplateBinding Property=Content}"
                                        VerticalAlignment="Center"
                                        HorizontalAlignment="Center"
                                        FontFamily="Segoe MDL2 Assets"
                                        Foreground="Black"
                                        FontSize="16"/>
+
                         </Grid>
                     </ControlTemplate>
                 </Setter.Value>
-
             </Setter>
+            
             <Setter Property="Background" Value="Transparent"/>
         </Style.Setters>
+
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Background" Value="	#99aab5"/>
@@ -35,7 +36,6 @@
                 <Setter Property="Background" Value="#7289da"/>
             </Trigger>
         </Style.Triggers>
-
     </Style>
 
 
@@ -64,22 +64,24 @@
                             Height="{TemplateBinding Height}"
                             Width="{TemplateBinding Width}"
                             CornerRadius="25"
-                            BorderThickness="0"
-                            >
+                            BorderThickness="0">
+
                             <TextBlock Text="{TemplateBinding Property=Content}"
                                        VerticalAlignment="Center"
                                        HorizontalAlignment="Center"
                                        FontFamily="Global Sans Serif"
                                        Foreground="White"
                                        FontSize="18"/>
+
                         </Border>
                     </ControlTemplate>
                 </Setter.Value>
-
             </Setter>
+            
             <Setter Property="Background" Value="#7289da"/>
             <Setter Property="HorizontalAlignment" Value="Left"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
+            
         </Style.Setters>
         <Style.Triggers>
             <Trigger Property="IsPressed" Value="True">
@@ -88,14 +90,10 @@
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Cursor" Value="Hand"/>
             </Trigger>
-
         </Style.Triggers>
     </Style>
 
-
-
-
-
+    
     <Style x:Key="TextBoxAuth" TargetType="TextBox">
         <Style.Setters>
             <Setter Property="OverridesDefaultStyle" Value="True"></Setter>
@@ -116,6 +114,7 @@
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
+            
             <Setter Property="Padding" Value="5"/>
             <Setter Property="FontFamily" Value="Global Sans Serif"/>
             <Setter Property="BorderThickness" Value="2"/>
@@ -124,6 +123,7 @@
             <Setter Property="BorderBrush" Value="Black"/>
         </Style.Setters>
     </Style>
+    
 
     <Style x:Key="PswdBoxAuth" TargetType="PasswordBox">
         <Style.Setters>
@@ -145,6 +145,7 @@
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
+            
             <Setter Property="Padding" Value="5,5,30,5"/>
             <Setter Property="FontFamily" Value="Global Sans Serif"/>
             <Setter Property="BorderThickness" Value="2"/>
@@ -166,9 +167,7 @@
             <Setter Property="Visibility" Value="Visible"/>
         </Style.Setters>
     </Style>
-
-
-
+    
 
     <Style x:Key="RevealPassword" TargetType="ToggleButton">
         <Style.Setters>
@@ -198,4 +197,5 @@
             <Setter Property="Margin" Value="5,0,5,0"/>
         </Style.Setters>
     </Style>
+    
 </ResourceDictionary>
