--- a/PasswordManagerMainWindow/Auth/Login.xaml
+++ b/PasswordManagerMainWindow/Auth/Login.xaml
@@ -32,101 +32,123 @@
             <ColumnDefinition Width="330"/>
             <ColumnDefinition Width="85"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2"
+        
+        <TextBlock Grid.Row="0" 
+                   Grid.Column="1" 
+                   Grid.ColumnSpan="2"
                    Grid.RowSpan="2"
                    HorizontalAlignment="Right" 
                    FontSize="14" Margin="0,32,20,32">
-            <Hyperlink NavigateUri="Signup.xaml" Foreground="#7289da"
-                   FontFamily="Global Sans Serif" 
-                   FontWeight="Bold" TextDecorations="{x:Null}">
+            <Hyperlink NavigateUri="Signup.xaml" 
+                       Foreground="#7289da"
+                       FontFamily="Global Sans Serif" 
+                       FontWeight="Bold" 
+                       TextDecorations="{x:Null}">
                 Create new account
             </Hyperlink>
+            
         </TextBlock>
-        <TextBlock Text="Welcome! " Grid.Column="1" Grid.Row="2" 
+        
+        <TextBlock Text="Welcome!"
+                   Grid.Column="1" 
+                   Grid.Row="2" 
                    HorizontalAlignment="Left" 
                    VerticalAlignment="Center" 
                    FontSize="28" 
                    Foreground="Black"
                    FontFamily="Global Sans Serif" 
-                   FontWeight="Bold"
-                   />
-        <TextBlock Text="Please Log into your account " Grid.Column="1" Grid.Row="3" 
+                   FontWeight="Bold"/>
+        
+        <TextBlock Text="Please Log into your account"
+                   Grid.Column="1" 
+                   Grid.Row="3" 
                    HorizontalAlignment="Left" 
                    VerticalAlignment="Center" 
                    FontSize="14" 
                    Foreground="SlateGray"
                    FontFamily="Global Sans Serif" 
-                   FontWeight="Bold"
-                   />
-        <TextBlock Text="Login" Grid.Column="1" Grid.Row="5" 
+                   FontWeight="Bold"/>
+        
+        <TextBlock Text="Login" 
+                   Grid.Column="1"
+                   Grid.Row="5" 
                    HorizontalAlignment="Left" 
                    VerticalAlignment="Center" 
                    FontSize="14" 
                    Foreground="Black"
                    FontFamily="Global Sans Serif" 
-                   FontWeight="Bold"
-                   />
-        <TextBox x:Name="LoginTextBox" Grid.Row="6" 
+                   FontWeight="Bold"/>
+        
+        <TextBox x:Name="LoginTextBox" 
+                 Grid.Row="6" 
                  Grid.Column="1" 
                  BorderThickness="2" 
                  Height="40"
-                 Style="{StaticResource TextBoxAuth}"
-                 />
-        <TextBlock Text="Password" Grid.Column="1" Grid.Row="8" 
+                 Style="{StaticResource TextBoxAuth}"/>
+        
+        <TextBlock Text="Password"
+                   Grid.Column="1"
+                   Grid.Row="8" 
                    HorizontalAlignment="Left" 
                    VerticalAlignment="Center" 
                    FontSize="14" 
                    Foreground="Black"
                    FontFamily="Global Sans Serif" 
-                   FontWeight="Bold"
-                   />
+                   FontWeight="Bold"/>
 
-        <components:BindablePasswordBox
-            x:Name="PasswordTextBox" Grid.Row="9" 
-                 Grid.Column="1" 
-                 Height="40"                
-            Visibility="Visible"
-            Password="{Binding Text, ElementName=KindaPassword}"
-            />
-        <TextBox x:Name="KindaPassword"  Grid.Row="9" 
+        <components:BindablePasswordBox x:Name="PasswordTextBox" 
+                                        Grid.Row="9" 
+                                        Grid.Column="1"                                       
+                                        Height="40"           
+                                        Visibility="Visible"
+                                        Password="{Binding Text, ElementName=KindaPassword}"/>
+        
+        <TextBox x:Name="KindaPassword"  
+                 Grid.Row="9" 
                  Grid.Column="1" 
                  Height="40"        
                  Visibility="Collapsed"
                  Padding="5,0,30,0"
                  Style="{StaticResource TextBoxAuth}"   
-                 Text="{Binding Password, ElementName=PasswordTextBox}" TextChanged="KindaPassword_TextChanged"
-                 />
+                 Text="{Binding Password, ElementName=PasswordTextBox}" 
+                 TextChanged="KindaPassword_TextChanged"/>
 
         <ToggleButton x:Name="ShowPasswordToggleButton"
-            Grid.Row="9" 
-                 Grid.Column="1" 
+                      Grid.Row="9" 
+                      Grid.Column="1" 
                       Height="25" Width="25" 
                       BorderThickness="0" FontSize="16"
                       Checked="ToggleButton_Checked"
                       Unchecked="ToggleButton_Unchecked"
                       IsChecked="False"
-                      Style="{StaticResource RevealPassword}"
-                      />
+                      Style="{StaticResource RevealPassword}"/>
+        
         <TextBlock x:Name="AurhError" 
                    Grid.Row="10" 
                    Grid.Column="1" 
                    Style="{StaticResource ErrorAuth}"/>
+        
         <Button x:Name="Submit" Grid.Column="1"
-            Grid.Row="11"
-            Content="Login"
-            Width="150"
-            Height="50" 
-            Style="{StaticResource Submit}" Click="Submit_Click"/>
+                Grid.Row="11"
+                Content="Login"
+                Width="150"
+                Height="50" 
+                Style="{StaticResource Submit}" 
+                Click="Submit_Click"/>
+
         <TextBlock Grid.Row="11" Grid.Column="1" 
                    HorizontalAlignment="Right"
                    VerticalAlignment="Center"  
                    FontSize="14" >
-            <Hyperlink NavigateUri = "Signup.xaml" Foreground="#7289da"
-                   FontFamily="Global Sans Serif" 
-                   FontWeight="Bold" TextDecorations="{x:Null}">
+            
+            <Hyperlink NavigateUri = "Signup.xaml"
+                       Foreground="#7289da"
+                       FontFamily="Global Sans Serif" 
+                       FontWeight="Bold" 
+                       TextDecorations="{x:Null}">
                 Reset password
             </Hyperlink>
+
         </TextBlock>
-        
     </Grid>
 </Page>
