--- a/PasswordManagerMainWindow/Auth/Login.xaml
+++ b/PasswordManagerMainWindow/Auth/Login.xaml
@@ -23,7 +23,7 @@
             <RowDefinition Height="10"/>
             <RowDefinition Height="30"/>
             <RowDefinition Height="50"/>
-            <RowDefinition Height="50"/>
+            <RowDefinition Height="100"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
@@ -126,8 +126,17 @@
         <TextBlock x:Name="AurhError" 
                    Grid.Row="10" 
                    Grid.Column="1" 
-                   Style="{StaticResource ErrorAuth}"/>
-        
+                   Style="{StaticResource ErrorAuth}"
+                   />
+        <CheckBox x:Name="RemmemberMe" Content="Remember me"
+                  Grid.Row="10" 
+                  Grid.Column="1"
+                  HorizontalAlignment="Left"
+                  VerticalAlignment="Bottom"
+                   Style="{DynamicResource RememberMe}" 
+                  
+                  />
+
         <Button x:Name="Submit" Grid.Column="1"
                 Grid.Row="11"
                 Content="Login"
