--- a/PasswordManagerMainWindow/Auth/Login.xaml
+++ b/PasswordManagerMainWindow/Auth/Login.xaml
@@ -6,7 +6,8 @@
       xmlns:local="clr-namespace:PasswordManager.Auth"
       xmlns:components="clr-namespace:PasswordManager.Components"
       mc:Ignorable="d" 
-      d:DesignHeight="520" d:DesignWidth="500"
+      d:DesignHeight="520" 
+      d:DesignWidth="500"
       Title="Login"
       Background="White"
       ShowsNavigationUI="False">
@@ -33,13 +34,15 @@
             <ColumnDefinition Width="85"/>
         </Grid.ColumnDefinitions>
         
-        <TextBlock Grid.Row="0" 
+        <TextBlock x:Name="CreateAccountTextBlock"
+                   Grid.Row="0" 
                    Grid.Column="1" 
                    Grid.ColumnSpan="2"
                    Grid.RowSpan="2"
                    HorizontalAlignment="Right" 
                    FontSize="14" Margin="0,32,20,32">
-            <Hyperlink NavigateUri="Signup.xaml" 
+            <Hyperlink x:Name="CreateAccountHyperLink" 
+                       NavigateUri="Signup.xaml" 
                        Foreground="#7289da"
                        FontFamily="Global Sans Serif" 
                        FontWeight="Bold" 
@@ -79,7 +82,7 @@
                    FontFamily="Global Sans Serif" 
                    FontWeight="Bold"/>
         
-        <TextBox x:Name="LoginTextBox" 
+        <TextBox x:Name="EmailTextBox" 
                  Grid.Row="6" 
                  Grid.Column="1" 
                  BorderThickness="2" 
@@ -103,7 +106,7 @@
                                         Visibility="Visible"
                                         Password="{Binding Text, ElementName=KindaPassword}"/>
         
-        <TextBox x:Name="KindaPassword"  
+        <TextBox x:Name="KindaPasswordTextBox"  
                  Grid.Row="9" 
                  Grid.Column="1" 
                  Height="40"        
@@ -123,31 +126,35 @@
                       IsChecked="False"
                       Style="{StaticResource RevealPassword}"/>
         
-        <TextBlock x:Name="AuthError" 
+        <TextBlock x:Name="AuthErrorTextBlock" 
                    Grid.Row="10" 
                    Grid.Column="1" 
                    Style="{StaticResource ErrorAuth}"/>
-        <CheckBox x:Name="RemmemberMe" Content="Remember me"
+        
+        <CheckBox x:Name="RemmemberMeCheckBox" Content="Remember me"
                   Grid.Row="10" 
                   Grid.Column="1"
                   HorizontalAlignment="Left"
                   VerticalAlignment="Bottom"
-                  Style="{DynamicResource RememberMe}"/>
+                  Style="{StaticResource RememberMe}"/>
 
-        <Button x:Name="Submit" Grid.Column="1"
+        <Button x:Name="SubmitButton" Grid.Column="1"
                 Grid.Row="11"
                 Content="Login"
                 Width="150"
                 Height="50" 
                 Style="{StaticResource Submit}" 
-                Click="Submit_Click"/>
+                Click="SubmitButton_Click"/>
 
-        <TextBlock Grid.Row="11" Grid.Column="1" 
+        <TextBlock x:Name="ResetPasswordTextBlock"
+                   Grid.Row="11" 
+                   Grid.Column="1" 
                    HorizontalAlignment="Right"
                    VerticalAlignment="Center"  
                    FontSize="14" >
             
-            <Hyperlink NavigateUri = "Signup.xaml"
+            <Hyperlink x:Name="ResetPasswordHyperlink"
+                       NavigateUri = "Signup.xaml"
                        Foreground="#7289da"
                        FontFamily="Global Sans Serif" 
                        FontWeight="Bold" 
